--- a/BookmarkReader/app/build.gradle
+++ b/BookmarkReader/app/build.gradle
@@ -42,5 +42,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     testCompile 'junit:junit:4.12'
 }
