--- a/BookmarkReader/app/build.gradle
+++ b/BookmarkReader/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion '25.0.0'
     defaultConfig {
-        applicationId "reader.bookmarkreader.com.bookmarkreader"
+        applicationId "com.codezilla.bookmarkreader"
         minSdkVersion 22
         targetSdkVersion 24
         versionCode 1
