--- a/BookmarkReader/app/src/main/AndroidManifest.xml
+++ b/BookmarkReader/app/src/main/AndroidManifest.xml
@@ -8,13 +8,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.codezilla.bookmarkreader.MainActivity">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".login.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".login.LoginActivity"></activity>
     </application>
 
 </manifest>
