--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+project.ext.compileSdkVersion = 24
+project.ext.buildToolsVersion = '25.0.0'
+project.ext.minSdkVersion = 22
+project.ext.targetSdkVersion = 22
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
-
-
     }
 }
 
