--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     androidTestCompile 'org.mockito:mockito-android:2.7.22'
     androidTestCompile 'org.awaitility:awaitility:3.0.0'
+    compile project(path: ':domain')
 }
