--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'realm-android'
 android {
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
@@ -22,5 +22,9 @@ android {
 }
 
 dependencies {
-
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.0'
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+    androidTestCompile 'org.mockito:mockito-android:2.7.22'
+    androidTestCompile 'org.awaitility:awaitility:3.0.0'
 }
