--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,18 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile project(path: ':domain')
     //Tests
     androidTestCompile ('com.android.support.test.espresso:espresso-core:3.0.0',{
         exclude module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    testCompile 'org.mockito:mockito-android:2.7.22'
+    testCompile 'org.awaitility:awaitility:3.0.0'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     androidTestCompile 'org.mockito:mockito-android:2.7.22'
     androidTestCompile 'org.awaitility:awaitility:3.0.0'
-    compile project(path: ':domain')
+
 }
