Squashed commit of the following:
commit b6e1940fdf902bfefb81ff82f719b0e5ca1d0595
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sun Sep 17 03:26:35 2017 +0300

    background job syncronization on activity resume / pause

commit a1e12f1ec87e49cd07e56b096c1118ab2eea8e1b
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sun Sep 17 02:28:28 2017 +0300

    favicon extractor class added

commit d7d2981da1e9aa29f6e72fc318d7b684ab70f7b5
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sat Sep 16 22:27:02 2017 +0300

    WebUnitRepository interface modified. Favicon url has been add to domain

    -Favicon url updating on new web unit content add has been add
    -WebUnitRepository interace changed. update method introduced.

commit f1388ed0939f0bdb3c3c891486fa21d964e67ef5
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sat Sep 16 02:39:08 2017 +0300

    when a new url has been add , favicon url set appropriately

commit a042c28e0857c150fe8e8d0534fdf0cbefc04040
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Fri Sep 15 00:37:28 2017 +0300

    website icon url centered

commit efc291b7e69e94f696fdedec52f6c5f506ef75f8
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Thu Sep 14 22:34:03 2017 +0300

    job schedular parameters fixed

commit 8d6d37e470415bd0a5d995ead78f21af5f9d7684
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sat Sep 9 20:55:48 2017 +0300

    Bacground content update draft 1

commit 16fb7f55ad4081578b676e361f8ae85de29204ff
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Sat Sep 9 16:22:55 2017 +0300

    repository webunit content update mechanism has been add

commit cd209940a502da876cfc3af67bca5a78b88738d5
Author: Davut Ozcan <davut.ozcan@ericsson.com>
Date:   Wed Sep 13 17:19:47 2017 +0300

    RealmRepository realm object bugs has been fixed

commit e027f4b6ed232e5aa9a442fad99801d90980ccd6
Author: Davut Ozcan <davutozcan87@gmail.com>
Date:   Thu Sep 7 23:50:28 2017 +0300

    LogRepository interface and imp intro

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,22 @@
             </intent-filter>
         </activity>
         <activity android:name=".login.LoginActivity"></activity>
+        <service
+            android:name=".sync.ScheduledSynchronizer"
+            android:label="Smart Article Reader Background synchronizer"
+            android:permission="android.permission.BIND_JOB_SERVICE">
+        </service>
+        <receiver android:name=".sync.MyBootCompletedListener" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
+
 
 </manifest>
