--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -27,4 +27,8 @@ dependencies {
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     androidTestCompile 'org.mockito:mockito-android:2.7.22'
     androidTestCompile 'org.awaitility:awaitility:3.0.0'
+
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    testCompile 'org.mockito:mockito-all:1.10.19'
+    testCompile 'org.awaitility:awaitility:3.0.0'
 }
