--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-project.ext.compileSdkVersion = 24
-project.ext.buildToolsVersion = '25.0.0'
-project.ext.minSdkVersion = 22
-project.ext.targetSdkVersion = 22
+
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath  "io.realm:realm-gradle-plugin:3.5.0"
     }
 }
@@ -18,6 +18,10 @@ allprojects {
         jcenter()
         maven {
             url "https://maven.google.com"
+        }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
         }
     }
 }
