--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     compile project(path: ':domain')
+    compile project(path: ':article')
     //Tests
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.0', {
         exclude module: 'support-annotations'
