--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+    // https://mvnrepository.com/artifact/com.googlecode.java-diff-utils/diffutils
+    compile group: 'com.googlecode.java-diff-utils', name: 'diffutils', version: '1.3.0'
     compile project(path: ':domain')
     compile project(path: ':article')
     //Tests
