WebUnit now has status field
-when user clicks an item its removed from list on comeback
-webunit status field added
-weblistview now displays only new items

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".sync.AlarmReceiver" >
+        </receiver>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
