--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 26
-    buildToolsVersion  '26.0.2'
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.codezilla.bookmarkreader"
         minSdkVersion 22
@@ -22,11 +21,12 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     dataBinding {
-        enabled true
+       enabled true
     }
 }
 
 dependencies {
+    implementation 'com.android.support:support-v4:26.1.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:26+'
     compile 'com.android.support:design:26+'
@@ -52,4 +52,8 @@ dependencies {
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     androidTestCompile 'org.mockito:mockito-android:2.7.22'
     androidTestCompile 'org.awaitility:awaitility:3.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
+
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
