--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-
 buildscript {
+    ext.kotlin_version = '1.1.51'
     repositories {
         jcenter()
         maven {
@@ -9,7 +9,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath  "io.realm:realm-gradle-plugin:4.3.1"
+        classpath "io.realm:realm-gradle-plugin:4.3.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
