Squashed commit of the following:
commit d3727797017eded19348d74ca4c8490211da413a
Author: davutozcan87@gmail.com <davut.ozcan@ericsson.com>
Date:   Sat Mar 10 22:06:09 2018 +0300

    some websites script content was rendering as article, its fixed

commit d1975c21e28743b529dd87d2ad2dd105ae1b3e2d
Author: Davut Ozcan <davut.ozcan@ericsson.com>
Date:   Mon Mar 5 23:09:12 2018 +0300

    Articleview extract article added

commit 58a4c6d8e3a1f4f81a8e9db7bd0a13c4b62a9087
Author: Davut Ozcan <davut.ozcan@ericsson.com>
Date:   Mon Mar 5 22:38:05 2018 +0300

    CustomAsyncTask replaced with functional

commit 062eab791cfd15a9f0dad2ac945984574494efb2
Author: davutozcan87@gmail.com <davut.ozcan@ericsson.com>
Date:   Sun Mar 4 22:15:28 2018 +0300

    html converted to article

commit 7a816db63dc8ee63a38e785866f97444063cc625
Author: davutozcan87@gmail.com <davut.ozcan@ericsson.com>
Date:   Sun Mar 4 21:53:17 2018 +0300

    javascript callback on html content load

commit 4fedc3982088b42af9740c640a39552907eb74ee
Author: davutozcan87@gmail.com <davut.ozcan@ericsson.com>
Date:   Sun Mar 4 18:16:11 2018 +0300

    article view switch tests passes

commit 5bc8d2b3e93fd56208ebb196e64b99951a134e74
Author: davutozcan87@gmail.com <davut.ozcan@ericsson.com>
Date:   Sun Mar 4 18:02:21 2018 +0300

    article view switch done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,11 @@ dependencies {
     androidTestCompile 'org.mockito:mockito-android:2.7.22'
     androidTestCompile 'org.awaitility:awaitility:3.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-text
+    compile group: 'org.apache.commons', name: 'commons-text', version: '1.2'
+
+
 }
 
 apply plugin: 'kotlin-android'
