Changed JobSchedular with FirebaseDispatcher

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,11 @@
             android:name=".sync.ScheduledSynchronizer"
             android:label="Smart Article Reader Background synchronizer"
             android:permission="android.permission.BIND_JOB_SERVICE">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+            </intent-filter>
         </service>
+
         <receiver android:name=".sync.MyBootCompletedListener" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
