--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,12 @@ android {
     dataBinding {
        enabled true
     }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -66,7 +72,8 @@ dependencies {
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:+"
     implementation "androidx.lifecycle:lifecycle-common-java8:+"
 
-
+    // Firebase job dispatcher
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
 }
 
 apply plugin: 'kotlin-android'
