--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     implementation "android.arch.work:work-runtime:1.0+"
     implementation 'ru.rambler.android:swipe-layout:1.0.15'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
 }
 
 apply plugin: 'kotlin-android'
